--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello
+    
 </body>
-    <script>alert('hey');</script>
+<script src="checker.js"></script>
 </html>
