--- a/landing.html
+++ b/landing.html
@@ -14,10 +14,10 @@
         <div id="title">Title  here</div>
         <div id="instructions">To continue to the augmented-reality model, please select your device type below:</div>
         <div class="button-container">
-            <a href="https://android.android" class="link-button">Android</a>
+            <a href="https://ar-works.s3.ca-central-1.amazonaws.com/Test_Gazebo_01.glb" class="link-button">Android</a>
         </div>
         <div class="button-container">
-            <a href="https://ios.ios" class="link-button">iOS</a>
+            <a href="https://ar-works.s3.ca-central-1.amazonaws.com/Test_Gazebo_01.usdz" class="link-button">iOS</a>
         </div>
     </div>
 </body>
