--- a/landing.html
+++ b/landing.html
@@ -14,7 +14,7 @@
         <div id="title">Title  here</div>
         <div id="instructions">To continue to the augmented-reality model, please select your device type below:</div>
         <div class="button-container">
-            <a href="https://ar-works.s3.ca-central-1.amazonaws.com/Test_Gazebo_01.glb" class="link-button">Android</a>
+            <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://ar-works.s3.ca-central-1.amazonaws.com/Test_Gazebo_01.glb?raw=true#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" class="link-button">Android</a>
         </div>
         <div class="button-container">
             <a href="https://ar-works.s3.ca-central-1.amazonaws.com/Test_Gazebo_01.usdz" class="link-button">iOS</a>
