--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
-<script src="checker.js"></script>
+<body></body>
+<script src="./checker.js"></script>
 </html>
