--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,8 @@
 
 <body>
     <div id="container">
-        <div id="title">Title  here</div>
+        <div id="title">Double Gazebo (Markham)</div>
+        <div id="artist">By: Native Art Department International (Maria Hupfield and Jason Lujan)</div>
         <div id="instructions">To continue to the augmented-reality model, please select your device type below:</div>
         <div class="button-container">
             <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://ar-works.s3.ca-central-1.amazonaws.com/GAZEBO4.glb?raw=true#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" class="link-button">Android</a>
