--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body></body>
+<body style="background-color: #181818;"></body>
 <script src="./checker.js"></script>
 </html>
