--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Home </title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #181818;"></body>
-<script src="./checker.js"></script>
+
+<body>
+    <div id="demos" class="hide">
+        <div class="demo">
+            <h3>Double Gazebo (Markham)</h3>
+            <div class="aaa">
+                <div>
+                    <div class="zzz">Android</div>
+                    <a id="andy" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;" rel="ar" class="bbb">
+                        <img class="ccc" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg">
+                    </a>
+                </div>
+                <div>
+                    <div class="zzz">iOS</div>
+                    <a id="appy" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.usdz" rel="ar" class="bbb">
+                        <img class="ccc" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="index.js"></script>
 </html>
