--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="demos" class="hide">
         <div class="demo">
             <h3>Double Gazebo (Markham)</h3>
+            <h6>By: Native Art Department International (Maria Hupfield and Jason Lujan)</h6>
             <div class="aaa">
                 <div>
                     <div class="zzz">Android</div>
