--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="main">
+        <div id="title">Double Gazebo (Markham)</div>
+        <div id="artist">By: Native Art Department International (Maria Hupfield and Jason Lujan)</div>
+        <div id="links">
+            <div class="link-container">
+                <div class="link-title">Android</div>
+                <a class="link" id="android-link" rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg"/>
+                </a>
+            </div>
+            <div class="link-container">
+                <div class="link-title">iOS</div>
+                <a class="link" id="android-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.usdz">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg"/>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
