back to click()

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="link-container">
                 <div class="link-title">iOS</div>
-                <a class="link" id="android-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.usdz">
+                <a class="link" id="apple-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.usdz">
                     <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg"/>
                 </a>
             </div>
