hide until confirmed not iOS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
+    <div id="main" class="hidden">
         <div id="title">Double Gazebo (Markham)</div>
         <div id="artist">By: Native Art Department International (Maria Hupfield and Jason Lujan)</div>
         <div id="links">
