--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div id="main" class="hidden">
-        <div id="title">Double Gazebo (Markham)</div>
-        <div id="artist">By: Native Art Department International (Maria Hupfield and Jason Lujan)</div>
+        <div id="title">Temp Title</div>
+        <div id="artist">By: Temp Artist</div>
         <div id="links">
             <div class="link-container">
                 <div class="link-title">Android</div>
-                <a class="link" id="android-link" rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
-                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg"/>
+                <a class="link" id="android-link" rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/temp/temp.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/temp.jpg"/>
                 </a>
             </div>
             <div class="link-container">
                 <div class="link-title">iOS</div>
-                <a class="link" id="apple-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/gazebo.usdz">
-                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/gazebo.jpg"/>
+                <a class="link" id="apple-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/temp.usdz">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/temp.jpg"/>
                 </a>
             </div>
         </div>
