--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div id="links">
             <div class="link-container">
                 <div class="link-title">Android</div>
-                <a class="link" id="android-link" rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/temp/temp.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
-                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/temp.jpg"/>
+                <a class="link" id="android-link" rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/project1/KC2.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/KC2.png"/>
                 </a>
             </div>
             <div class="link-container">
                 <div class="link-title">iOS</div>
-                <a class="link" id="apple-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/gazebo/temp.usdz">
-                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/temp.jpg"/>
+                <a class="link" id="apple-link" rel="ar" href="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/project1/KC2.usdz">
+                    <img class="preview-img" src="https://nb-2020-content.nyc3.cdn.digitaloceanspaces.com/content/previews/KC2.png"/>
                 </a>
             </div>
         </div>
