update artist info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id="main" class="hidden">
+        <div id="title">Project1</div>
+        <div id="artist">KC Adams</div>
         <div id="links">
             <div class="link-container">
                 <div class="link-title">Android</div>
